syntax = "proto2";

package hdfs;

option java_package = "ds.hdfs";
option java_outer_classname = "ReadRequestProto";

message ReadRequest{
 required string filename = 1;
 required int32  blockNumber = 2;
}
